Change menu button icon

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -96,7 +96,7 @@
             </li>
             <li class="nav-item dropdown {{activeOneListToRuleThemAll}}">
                 <a href="/all-todos" class="nav-link">
-                    <i class="fe fe-list fe-16"></i>
+                    <i class="fe fe-layers fe-16"></i>
                     <span class="ml-3 item-text">All TODOs</span>
                 </a>
             </li>
