--- a/views/videos.mustache
+++ b/views/videos.mustache
@@ -47,8 +47,7 @@
                     <div class="card mb-4">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Videos</h5>
-                                <table class="table table-hover">
+                                <table class="table table-striped table-bordered">
                                     <thead>
                                     <tr>
                                         <th scope="col">Title</th>
