--- a/views/writings.mustache
+++ b/views/writings.mustache
@@ -30,8 +30,7 @@
                     <div class="card mb-4">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">All Writings</h5>
-                                <table class="table table-hover">
+                                <table class="table table-striped table-bordered">
                                     <thead>
                                     <tr>
                                         <th scope="col">#</th>
