Add select2 for selecting authors

--- a/views/include/head.mustache
+++ b/views/include/head.mustache
@@ -15,5 +15,7 @@
 <!-- Icons CSS -->
 <link rel="stylesheet" href="/css/feather.css">
 
+<link rel="stylesheet" href="/css/select2.css">
+
 <!-- App CSS -->
 <link rel="stylesheet" href="/css/app-dark.css" id="darkTheme">
