--- a/views/include/include.mustache
+++ b/views/include/include.mustache
@@ -8,3 +8,5 @@
 <script src="/js/config.js"></script>
 <script src='/js/daterangepicker.js'></script>
 <script src="/js/jquery-bootstrap-purr.min.js"></script>
+<script src='/js/select2.min.js'></script>
+<script src='/js/functions.js'></script>
